Widget je postule, présentation brute (#672)
